2002-03-28  Ken Raeburn  <raeburn@mit.edu>

	* kerberos.c: Include errno.h.

2002-03-26  Sam Hartman  <hartmans@mit.edu>

	* kerberos.c kerberos5.c (Data): Fix indentation; fix termination condition

2002-03-14  Sam Hartman  <hartmans@mit.edu>

	* kerberos5.c kerberos.c  (Data): Don't overflow
	buffer. [telnet/1073] 

2002-03-13  Ezra Peisach  <epeisach@mit.edu>

	* configure.in: Do not explicitly add getent.o and setenv.o to
	LIBOBJS. Autoconf 2.53 labels this as an error. Move to
	Makefile.in.

	* Makefile.in (OBJS): Add getent.o and setenv.o explicity. 

2001-10-09  Ken Raeburn  <raeburn@mit.edu>

	* auth-proto.h, auth.h, enc-proto.h, enc_des.c, encrypt.c,
	encrypt.h, kerberos.c, key-proto.h, misc-proto.h, misc.h,
	setenv.c: Make prototypes unconditional.  Don't define P().

2001-07-23  Ezra Peisach  <epeisach@mit.edu>

	* enc_des.c (fb64_start): Remove variable set but never used.

2001-07-08  Ezra Peisach  <epeisach@mit.edu>

	* kerberos.c (Data): Third argument now const.

	* misc.c (printd): First argument now const.

	* misc-proto.h: Modify printd prototype to take const first
	argument. 

	* auth.c: Cast argument to memcpy to unsigned. 

2001-07-06  Ezra Peisach  <epeisach@mit.edu>

	* configure.in: Check for need to provide setenv prototype if
	setenv is in the C library.

	* forward.c: Provide setenv prototype if needed.

	* auth.c (auth_name): Cast result of sizeof() to int to match
	printf format specification.

2001-07-05  Ezra Peisach  <epeisach@mit.edu>

	* encrypt.c (encrypt_reply): Cast arguments to printf to match
	format in debugging statments.

2001-07-02  Ezra Peisach  <epeisach@mit.edu>

	* krb5forw.h: File with prototype for rd_and_store_for_creds().

	* kerberos5.c: Include krb5forw.h for rd_and_store_for_creds()
	prototype which is removed from this file.

	* forward.c: Include krb5forw.h for prototype.

	* setenv.c: Include misc-proto.h for setenv/unsetenv prototypes.

	* parsetos.c: Include misc-proto.h for parsetos prototype.
